# godot

./: .gitignore  COPYRIGHT.txt  SConstruct  meson.build  meson_options.txt  methods.py  omg2.diff  omg3.diff  sourceglobber.py
.github/workflows/: android_builds.yml  ios_builds.yml  javascript_builds.yml  linux_builds.yml  macos_builds.yml  meson.yml  meson_android_builds.yml  meson_ios_builds.yml  meson_javascript_builds.yml  meson_linux_builds.yml  meson_macos_builds.yml  meson_windows_builds.yml  windows_builds.yml
core/: SCsub  core_constants.cpp  input_map.cpp  input_map.h  meson.build  project_settings.cpp  register_core_types.cpp  rid_owner.h  script_debugger.cpp  script_debugger.h  script_debugger_local.h  script_debugger_peer.cpp  script_debugger_remote.cpp  script_debugger_remote.h  script_language.cpp  script_language.h  self_list.h  ustring.cpp  variant.cpp  variant_call.cpp  variant_op.cpp  variant_parser.cpp
core/bind/: core_bind.cpp  core_bind.h
core/crypto/: SCsub  aes_context.cpp  aes_context.h  crypto.cpp  crypto.h  crypto_core.cpp  crypto_core.h  gcm_context.cpp  gcm_context.h
core/debugger/: engine_debugger.cpp  engine_debugger.h
core/error/: meson.build
core/extension/: gdextension.cpp  gdextension_library_loader.cpp  gdextension_library_loader.h  meson.build
core/input/: meson.build
core/io/: dtls_server.cpp  file_access_network.cpp  http_client.cpp  http_client.h  http_client_tcp.cpp  http_client_tcp.h  http_server.cpp  http_server.h  ip.cpp  ip.h  ip_address.cpp  ip_address.h  marshalls.cpp  marshalls.h  meson.build  multiplayer_api.cpp  multiplayer_api.h  multiplayer_replicator.cpp  multiplayer_replicator.h  net_socket.cpp  net_socket.h  packet_buffer.h  packet_peer_dtls.cpp  packet_peer_udp.cpp  packet_peer_udp.h  resource_format_binary.cpp  resource_format_binary.h  resource_uid.cpp  resource_uid.h  rpc.h  stream_peer.cpp  stream_peer.h  stream_peer_compression.cpp  stream_peer_compression.h  stream_peer_ssl.cpp  stream_peer_ssl.h  stream_peer_tcp.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  (+1 more)
core/math/: expression.cpp  meson.build
core/multiplayer/: multiplayer_api.cpp  multiplayer_api.h  multiplayer_peer.cpp  multiplayer_peer.h  multiplayer_replication_interface.cpp  multiplayer_replication_interface.h  multiplayer_replicator.cpp  multiplayer_replicator.h  rpc_manager.cpp
core/object/: make_virtuals.py  meson.build  script_language.h
core/os/: input_event.cpp  input_event.h  meson.build  os.cpp  os.h
core/string/: meson.build
core/templates/: meson.build
core/variant/: binder_common.h  meson.build  variant.h  variant_construct.cpp
cross/: android-base  emscripten  iphone.txt
doc/classes/: @GDScript.xml  @GlobalScope.xml  Crypto.xml  CryptoKey.xml  EditorInspector.xml  File.xml  IP.xml  InputEventKey.xml  Marshalls.xml  MultiplayerAPI.xml  MultiplayerReplicator.xml  Node.xml  PacketPeer.xml  PacketPeerUDP.xml  ProjectSettings.xml  SceneTree.xml  StreamPeer.xml
drivers/: SCsub  meson.build
drivers/alsa/: audio_driver_alsa.cpp
drivers/coreaudio/: audio_driver_coreaudio.cpp
drivers/dummy/: meson.build  rasterizer_dummy.h
drivers/gles2/: rasterizer_canvas_base_gles2.cpp  rasterizer_canvas_gles2.cpp  rasterizer_storage_gles2.cpp  rasterizer_storage_gles2.h  shader_gles2.cpp
drivers/gles_common/: rasterizer_common_stubs.h
drivers/opengl/: rasterizer_opengl.cpp  rasterizer_storage_opengl.cpp
drivers/pulseaudio/: audio_driver_pulseaudio.cpp
drivers/unix/: ip_unix.cpp  ip_unix.h  meson.build  (+8 more)
drivers/vulkan/: meson.build  rendering_device_vulkan.cpp
editor/: animation_track_editor.cpp  editor_export.cpp  editor_export.h  editor_inspector.cpp  editor_inspector.h  editor_node.cpp  editor_node.h  editor_path.cpp  editor_plugin.cpp  editor_plugin.h  editor_properties.cpp  editor_run.cpp  editor_run_native.cpp  inspector_dock.cpp  meson.build  project_export.cpp  project_export.h  project_manager.cpp  project_settings.cpp  project_settings_editor.cpp  project_settings_editor.h  scene_tree_dock.cpp  script_editor_debugger.cpp  script_editor_debugger.h  settings_config_dialog.cpp
main/: main.cpp
modules/: SCsub  meson.build
modules/enet/: config.py  meson.build  networked_multiplayer_enet.cpp  networked_multiplayer_enet.h
modules/enet/doc_classes/: NetworkedMultiplayerENet.xml
modules/gamecenter/: meson.build
modules/gdnative/gdnative/: meson.build
modules/webxr/: meson.build  webxr_interface_js.cpp
platform/javascript/: SCsub  audio_driver_javascript.cpp  audio_driver_javascript.h  detect.py  display_server_javascript.cpp  display_server_javascript.h  dom_keys.inc  emscripten_helpers.py  engine.js  godot_audio.h  godot_js.h  javascript_eval.cpp  javascript_main.cpp  javascript_runtime.cpp  javascript_singleton.cpp  meson.build  os_javascript.cpp  os_javascript.h  platform_config.h  pre.js
platform/javascript/api/: api.cpp  javascript_tools_editor_plugin.cpp  javascript_tools_editor_plugin.h
platform/javascript/engine/: engine.js  loader.js  path.js  pre.js  preloader.js  utils.js
platform/javascript/export/: export.cpp  export_plugin.h
platform/javascript/js/engine/: config.js  engine.js  preloader.js
platform/javascript/js/libs/: audio.worklet.js  library_godot_audio.js  library_godot_display.js  library_godot_input.js  library_godot_javascript_singleton.js  library_godot_os.js
platform/javascript/native/: library_godot_display.js  library_godot_os.js  utils.js
scene/: register_scene_types.cpp
scripts/: make_virtuals.py  meson.build  module_db.py  modules_gen.py  scons_compat.py  splash_generator.py  utils.py
servers/: audio_server.cpp  audio_server.h  register_server_types.cpp  rendering_server.cpp
servers/physics_3d/: meson.build
servers/rendering/: meson.build  rendering_server_wrap_mt.h
servers/rendering/renderer_rd/: meson.build
servers/rendering/renderer_rd/forward_clustered/: meson.build
servers/rendering/renderer_rd/forward_mobile/: meson.build
servers/rendering/renderer_rd/shaders/: meson.build
splash/: meson.build
tests/: meson.build  test_object.h
(+302 files in other folders)
