SOURCES += files([
'area_3d_sw.cpp',
'area_pair_3d_sw.cpp',
'body_3d_sw.cpp',
'body_pair_3d_sw.cpp',
'broad_phase_3d_bvh.cpp',
'broad_phase_3d_sw.cpp',
'collision_object_3d_sw.cpp',
'collision_solver_3d_sat.cpp',
'collision_solver_3d_sw.cpp',
'gjk_epa.cpp',
'physics_server_3d_sw.cpp',
'physics_server_3d_wrap_mt.cpp',
'shape_3d_sw.cpp',
'soft_body_3d_sw.cpp',
'space_3d_sw.cpp',
'step_3d_sw.cpp',

])

subdir('joints')
