SOURCES += files([
'renderer_canvas_cull.cpp',
'renderer_canvas_render.cpp',
'renderer_compositor.cpp',
'renderer_scene.cpp',
'renderer_scene_cull.cpp',
'renderer_scene_occlusion_cull.cpp',
'renderer_scene_render.cpp',
'renderer_storage.cpp',
'renderer_thread_pool.cpp',
'renderer_viewport.cpp',
'rendering_device_binds.cpp',
'rendering_device.cpp',
'rendering_server_default.cpp',
'rendering_server_globals.cpp',
'shader_language.cpp',
'shader_types.cpp',
'shader_warnings.cpp',

])

subdir('renderer_rd')
