module_gdnative_srcs += files([
'aabb.cpp',
'array.cpp',
'basis.cpp',
'callable.cpp',
'color.cpp',
'dictionary.cpp',
'gdnative.cpp',
'node_path.cpp',
'packed_arrays.cpp',
'plane.cpp',
'quaternion.cpp',
'rect2.cpp',
'rid.cpp',
'signal.cpp',
'string.cpp',
'string_name.cpp',
'transform2d.cpp',
'transform_3d.cpp',
'variant.cpp',
'vector2.cpp',
'vector3.cpp',
])
