SOURCES += files(
'cluster_builder_rd.cpp',
'effects_rd.cpp',
'pipeline_cache_rd.cpp',
'renderer_canvas_render_rd.cpp',
'renderer_compositor_rd.cpp',
'renderer_scene_environment_rd.cpp',
'renderer_scene_gi_rd.cpp',
'renderer_scene_render_rd.cpp',
'renderer_scene_sky_rd.cpp',
'renderer_storage_rd.cpp',
'shader_compiler_rd.cpp',
'shader_rd.cpp',
)

subdir('forward_clustered')
subdir('forward_mobile')
subdir('shaders')
